[package]
name = "reverse_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
database = { path = "../database" }
serde = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4.5.45", features = ["derive"] }
tera = "1.20.0"
heck = "0.5.0"
rust-embed = "8.7.2"
toml = "0.9.5"
